--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -2,6 +2,7 @@ Flask==1.0.2
 Flask-Cors==3.0.4
 Flask-Migrate==2.1.1
 Flask-RESTful==0.3.6
+Flask-Script==2.0.6
 Flask-SQLAlchemy==2.3.2
 psycopg2-binary==2.7.4
 requests==2.18.4
