--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "gulp build",
+    "dev": "gulp dev"
   },
   "author": "Justin Chang",
   "license": "ISC",
@@ -14,6 +15,9 @@
   },
   "devDependencies": {
     "gulp": "^3.9.1",
-    "typescript": "^3.0.3"
+    "nodemon": "^1.18.4",
+    "typescript": "^3.0.3",
+    "uglifyjs-webpack-plugin": "^2.0.1",
+    "webpack": "^4.19.1"
   }
 }
