--- a/server/package.json
+++ b/server/package.json
@@ -11,11 +11,17 @@
   "license": "ISC",
   "dependencies": {
     "bluebird": "^3.5.2",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "figlet": "^1.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.1.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
+    "babel-loader": "^8.0.2",
     "gulp": "^3.9.1",
     "nodemon": "^1.18.4",
+    "ts-loader": "^5.1.1",
     "typescript": "^3.0.3",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.19.1"
