--- a/server/package.json
+++ b/server/package.json
@@ -2,28 +2,25 @@
   "name": "mealprep-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "build": "gulp build",
-    "dev": "gulp dev"
+    "build-ts": "tsc",
+    "start": "npm run serve",
+    "serve": "node dist/server.js",
+    "watch-node": "nodemon dist/server.js",
+    "watch-ts": "tsc -w"
   },
   "author": "Justin Chang",
   "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^1.18.4",
+    "tslint": "^5.11.0",
+    "typescript": "^3.0.3"
+  },
   "dependencies": {
-    "bluebird": "^3.5.2",
+    "@types/express": "^4.16.0",
+    "@types/figlet": "^1.2.0",
     "express": "^4.16.3",
     "figlet": "^1.2.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.1.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
-    "@babel/preset-env": "^7.1.0",
-    "babel-loader": "^8.0.2",
-    "gulp": "^3.9.1",
-    "nodemon": "^1.18.4",
-    "ts-loader": "^5.1.1",
-    "typescript": "^3.0.3",
-    "uglifyjs-webpack-plugin": "^2.0.1",
-    "webpack": "^4.19.1"
   }
 }
