--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,15 +1,24 @@
 {
     "compilerOptions": {
-        "outDir": "./dist/",
-        "sourceMap": true,
+        "module": "commonjs",
+        "esModuleInterop": true,
+        "target": "es6",
         "noImplicitAny": true,
-        "module": "es6",
-        "target": "es2015",
-        "jsx": "react",
-        "allowJs": true,
-        "allowSyntheticDefaultImports": true // allow for normal import syntax
+        "moduleResolution": "node",
+        "sourceMap": true,
+        "outDir": "dist",
+        "baseUrl": ".",
+        "paths": {
+            "*": [
+                "node_modules/*",
+                "src/types/*"
+            ]
+        },
+        "lib": [
+            "es2015"
+        ]
     },
-    "exclude": [
-        "node_modules"
+    "include": [
+        "src/**/*"
     ]
-  }
+}
