--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "author": "Justin Chang",
   "license": "ISC",
   "devDependencies": {
+    "@types/mongoose": "^5.2.17",
     "nodemon": "^1.18.4",
     "tslint": "^5.11.0",
     "typescript": "^3.0.3"
@@ -20,6 +21,8 @@
   "dependencies": {
     "@types/express": "^4.16.0",
     "@types/figlet": "^1.2.0",
+    "@types/joi": "^13.4.5",
+    "@types/joigoose": "^2.0.1",
     "express": "^4.16.3",
     "figlet": "^1.2.0",
     "joi": "^13.6.0",
