--- a/recipe-scraper/package.json
+++ b/recipe-scraper/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bluebird": "^3.5.3",
+    "delay": "^4.1.0",
+    "figlet": "^1.2.1",
     "mongoose": "^5.4.0",
     "ramda": "^0.26.1"
   }
