--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,7 @@ server-python/**/*__pycache__
 server-python/**/*.pytest_cache
 
 # Server
-server/node_modules
-server/dist
+server/env
 
 
 # NLP Ingredients
