--- a/.gitignore
+++ b/.gitignore
@@ -6,16 +6,11 @@ firebase-credentials.json
 # Frontend
 frontend/src/tmp
 
-# Server-Python
-server-python/tmp
-server-python/temp
-server-python/env
-server-python/**/*__pycache__
-server-python/**/*.pytest_cache
-
 # Server
 server/env
 server/**/*.vscode
+server/**/*__pycache__
+server/**/*.pytest_cache
 
 
 # NLP Ingredients
