--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,8 +6,11 @@
     "@material-ui/core": "^3.9.0",
     "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
+    "cheerio": "^1.0.0-rc.2",
+    "delay": "^4.1.0",
     "flow-bin": "^0.91.0",
     "immutability-helper": "^2.9.0",
+    "puppeteer": "^1.11.0",
     "ramda": "^0.26.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
@@ -15,7 +18,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
